# COMP-550

./: .gitignore  README.md
class/: p1.yml  p2.yml
project1/: Benchmarking  DynamicCarPlanning  GeometricCarPlanning  Makefile  RigidBodyPlanning  RigidBodyPlanningWithControls  SE2RigidBodyPlanning  SE3RigidBodyPlanning  benchmark.db
project1/Demos/: Benchmarking.cpp  RigidBodyPlanning.cpp
project1/Resources/3D/: Home.cfg
project2/: Makefile  benchmark.db  list.txt  ompl_34d7b53bc79a_2023-09-20 171921.console  se2ez-benchmark  se2ez-plan  submit.sh
project2/class/: 2-link.yml  arm.yml  bugtrap1.yml  bugtrap2.yml  difficult.yml  disconnected1.yml  disconnected2.yml  highdof.yml  homotopy1.yml  ompl_10c75a3eac1d_2023-09-21 03:59:38.console  planar.yml  unintuitive.yml
project2/src/: se2ez-benchmark.cpp  se2ez-plan.cpp
project3/: Ev1.py  Ev1path1.py  Ev2.py  Ev2path2.py  Makefile  Project3Exercise2  Project3Exercise3  README  RigidBodyPlanning  benchmark.db  path1.txt  path2.txt  plotSolution.py
project3/src/: Project3Exercise2.cpp  Project3Exercise3.cpp  RTP.cpp  RTP.h  RigidBodyPlanning.cpp
project3/src/CollisionCheckingLibrary/: CMakeLists.txt  CollisionChecking.cpp
